@@ -1,3 +1,7 @@
+2016-12-22  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>
+
+	* gcc.target/s390/litpool-str-1.c: New test.
+
 2016-12-22  Dominik Vogt  <vogt@linux.vnet.ibm.com>
 
 	* gcc.target/s390/md/setmem_long-1.c: Use "s390_useable_hw".
